--- a/style.css
+++ b/style.css
@@ -1,77 +1,97 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-body{
-  background-color: #222;
-  color: #222222;
-  font-family: Roboto;
+
+#header
+{
+    background-color: #222222;
+    border-bottom: 3px solid #555555;
+    padding-left: 10%;
+    padding-right: 10%;
 }
-h1{
-  text-align: center;
-  color:#444;
-  text-shadow: 0px 1px #EEEEEE;
+
+#content
+{
+    background-color: #444444;
+    border-bottom: 3px solid #151515;
 }
-h2{
-  text-align: center;
-  color:#555;
-  text-shadow: 0px 1px #EEEEEE;
+
+#footer
+{
+    background-color: #222222;
 }
-h4{
-  text-align: center;
-  color:#666;
-  text-shadow: 0px 1px #EEEEEE;
+
+h1
+{
+    color: #d3d3d3;
+    font-size: 40px;
+    font-weight: lighter;
+    font-family: helvetica;
+    font-variant: small-caps;
+    text-decoration: none;
+    text-align: center;
+    text-shadow: 0px 1px 2px #000000;
+    padding-top: 20px;
 }
-#title{
-  background-color: #FFCCAA;
-  border-radius: 4px;
-  margin:20px 0px 20px 0px;
-  padding:15px 0px 15px 0px;
-  box-shadow: 0px 3px 3px #000000;
+
+#portrait
+{
+    margin: 20px auto 20px auto;
+    border: solid 3px #222;
+    box-shadow: 0px 2px 2px #111111;
 }
-.footer{
-  background-color:#181818;
-  width:100%;
-  height:100px;
-  margin-top:40px;
-  padding: 20px 0px 10px 0px;
-  border-top-style:solid;
-  border-bottom-style: solid; border-top-color:#151515;
- border-bottom-color: #252525; border-width:5px
+
+body
+{
+    font-family: Helvetica;
 }
-a{
-  color: #fff0e6;
+
+h3
+{
+    color: #ffffff;
+    font-family: Helvetica;
+    font-weight: lighter;
+    letter-spacing: 1px;
+    font-style: normal;
+    font-variant: normal;
+    font-size: 30px;
+    text-shadow: 0px 1.5px 2px #111111;
 }
-a:hover{
-  color: #ffffff;
-  transition: 0.2s;
-  text-shadow:#fff0e6
+
+p
+{
+    font-size: 18px;
+    color: #ede9e9;
+    letter-spacing: 0.6px;
+    font-weight: lighter;
+    font-family: helvetica;
+    line-height: 32px;
+    text-shadow: 0px 1.5px 1.5px #111111;
 }
-.footer-text{
-  text-align:center;
-  color: #555555!important;
-  text-shadow: 0px 1px 1px #000000;
+
+#welcome
+{
+    border-bottom: solid 1px #cccccc;
+    margin-right: 14px;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
 }
-#feynman{
-  border-radius:5px;
-  box-shadow: 0px 3px 3px #000000;
-  margin: auto;
+
+footer-text
+{
+    color: #7a7a7a;
 }
-#feynman:hover{
-  opacity:0.7;
-  transition:0.2s;
+
+#footer-text
+{
+    color: #888888;
+    text-align: center;
+    font-weight: lighter;
+    font-variant: small-caps;
+    font-size: 16px;
+    text-shadow: 0px 2px 2px #000000;
 }
-#well-right{
-  background-color: #fff0e6;
-  border-radius:5px;
-  box-shadow: 0px 3px 3px #000000;
-  margin: auto 2% auto 2%;
+
+a
+{
+    color: #c3c3c3;
 }
-.link:hover{
-  background-color: #EEBB99!important;
-  transition:0.2s;
-}
-#subtitle{
-  background-color:#FFCCAA;
-  border-radius:5px;
-  padding:8px 2px 2px 2px;
-  margin: 2% 2% 2% 2%;
-}
+
