--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h1
 body
 {
     font-family: Helvetica;
+    background-color: #222;
 }
 
 h3
@@ -78,7 +79,6 @@ p
 footer-text
 {
     color: #7a7a7a;
-    box-shadow: 0px 500px 0px 500px #000;
 }
 
 #footer-text
