--- a/_pgbackup/style_1492212398.css
+++ b/_pgbackup/style_1492212398.css
@@ -35,23 +35,14 @@ h1
 #portrait
 {
     margin: 20px auto 20px auto;
+    border: solid 3px #222;
     box-shadow: 0px 2px 2px #111111;
-}
-
-#portrait:hover
-{
-    opacity: 0.7;
-    transition: 0.1s;
-    box-shadow: 0px 3px 3px #111111;
 }
 
 body
 {
     font-family: Helvetica;
-    height:100%;
-    background-color:#222;
 }
-
 
 h3
 {
@@ -63,7 +54,6 @@ h3
     font-variant: normal;
     font-size: 30px;
     text-shadow: 0px 1.5px 2px #111111;
-    margin-left: 10px;
 }
 
 p
@@ -75,8 +65,6 @@ p
     font-family: helvetica;
     line-height: 32px;
     text-shadow: 0px 1.5px 1.5px #111111;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 #welcome
@@ -105,15 +93,5 @@ footer-text
 a
 {
     color: #c3c3c3;
-}
-
-a:hover
-{
-    color: #ffffff;
-    transition: 0.2s;
-}
-
-#colright
-{
 }
 
