--- a/_pgbackup/style_1492407738.css
+++ b/_pgbackup/style_1492407738.css
@@ -22,9 +22,7 @@ h1
 {
     background-color: rgba(211, 177, 209, 0.3);
     border-radius: 2px;
-    padding-bottom: 20px
 }
-
 
 #portrait
 {
@@ -44,14 +42,10 @@ h3
     margin-bottom: 30px;
 }
 
-#footer-text
+p
 {
-    margin-top: 30px;
-    text-transform: lowercase;
-    text-align: center;
-    letter-spacing: 1px;
-    font-size: 12px;
-    opacity: 0.7;
+    letter-spacing: 0.5px;
     margin-bottom: 30px;
 }
+
 
