--- a/_pgbackup/style_1492412854.css
+++ b/_pgbackup/style_1492412854.css
@@ -22,13 +22,15 @@ h1
 {
     background-color: rgba(211, 177, 209, 0.3);
     border-radius: 2px;
-    padding-bottom: 20px;
+    padding-bottom: 20px
 }
+
 
 #portrait
 {
+    margin-top: 15px;
+    margin: 0 auto;
     display: block;
-    margin-top: 20px;
 }
 
 button
