--- a/_pgbackup/bootstrap/css/bootstrap_1492414578.css
+++ b/_pgbackup/bootstrap/css/bootstrap_1492414578.css
@@ -288,6 +288,7 @@ th
     a,
   a:visited
     {
+        text-decoration: underline;
     }
     a[href]:after
     {
@@ -1736,18 +1737,15 @@ textarea
 
 a
 {
-    color: #43234a;
-    opacity: 0.7;
+    color: #337ab7;
     text-decoration: none;
-    transition: 0.2s;
 }
-
 
 a:hover,
 a:focus
 {
-    transition: 0.1s;
-    color: rgba(211, 177, 209, 0.3);
+    color: #23527c;
+    text-decoration: underline;
 }
 
 a:focus
