--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ h1
     margin-top: 70px;
     margin-bottom: 70px;
 }
-
+canvas{
+  z-index:-1;
+  position:relative;
+}
 #content
 {
-    background-color: rgba(211, 177, 209, 0.3);
+    background-color: rgba(239,222,234, 0.8);
     border-radius: 2px;
     padding-bottom: 20px;
     line-height: 25px;
@@ -70,4 +73,3 @@ p
 hr
 {
 }
-
