--- a/_pgbackup/style_1497929511.css
+++ b/_pgbackup/style_1497929511.css
@@ -2,12 +2,12 @@
 
 body
 {
-    background-color: #f2f2f2;
-    color: #2a2a2a;
+    background-color: #fbf2f5;
+    color: #43234a;
     padding-left: 10%;
     padding-right: 10%;
     font-family: helvetica;
-    height: 100%;
+    height:100%;
 }
 
 h1
@@ -19,16 +19,13 @@ h1
     margin-top: 70px;
     margin-bottom: 70px;
 }
-
-canvas
-{
-    z-index: -1;
-    position: relative;
+canvas{
+  z-index:-1;
+  position:relative;
 }
-
 #content
 {
-    background-color: rgba(225, 225, 225, 0.5);
+    background-color: rgba(239,222,234, 0.8);
     border-radius: 2px;
     padding-bottom: 20px;
     line-height: 25px;
@@ -52,7 +49,6 @@ h3
     margin-bottom: 30px;
     margin-top: 35px;
 }
-
 
 #footer-text
 {
@@ -78,4 +74,3 @@ p
 hr
 {
 }
-
